<resources>
    <string name="app_name">Home assistant</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    //home fragment
    <string name="right_now">Right now</string>
    <string name="room_name">Room name</string>
    <string name="activities">Activities</string>
    <string name="rooms">Rooms</string>
    <string name="fetching_data_from_server">Fetching data from server…</string>

    //rooms fragment
    <string name="accessories">Accessories</string>

    //login fragment
    <string name="connection_information">Connection information</string>
    <string name="broker_address">Broker address</string>
    <string name="port">Port</string>
    <string name="ssl_comunication">SSL/TLS communication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="clean_session">Clean session</string>
    <string name="connect">Connect</string>

    //navigation strings
    <string name="nav_home">Home</string>
    <string name="nav_rooms">Rooms</string>
    <string name="nav_security">Security</string>
    <string name="nav_settings">Settings</string>

    //settings fragment
    <string name="devices">Devices</string>
    <string name="family">Family</string>
    <string name="presets">Presets</string>
    <string name="logout">Logout</string>
    <string name="title_activity_devices">DevicesActivity</string>

    //add device activity
    <string name="addDeviceTitle">Add device</string>
    <string name="send">Send</string>
    <string name="device_type">Device type</string>
    <string name="activation_code">Activation code</string>
    <string name="device_id">Device ID</string>

    <string name="connection_connected_to">Connected to</string>
    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown connection status to</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">An error occurred connecting to</string>
    <string name="connection_clear">Clear</string>
    <string name="subscription_new">New Subscription</string>

    <string name="scene_name">Scene name</string>

    <string name="device_name">Device name</string>
    <string name="device_state">Device state</string>

    <string name="connecting">Connecting…</string>

    <string name="blinds_down">Down</string>
    <string name="blinds_up">Up</string>

    <string name="fullscreen_image_description">Fullscreen camera view</string>
    <string name="fullscreen_fragment">Fullscreen camera view</string>

    <string name="power">Power switch</string>
    <string name="device_settings">Device settings</string>
    <string name="value_of_parameter">Value of parameter</string>
    <string name="parameter_name">Parameter name</string>

    //socket detail
    <string name="socket_voltage">Voltage</string>
    <string name="socket_current">Current</string>
    <string name="socket_energy">Energy</string>
    <string name="socket_consumption">Consumption</string>
    <string name="state_on">State: ON</string>
    <string name="state_off">State: OFF</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>

    //blinds detail
    <string name="window_position">Blinds position: %s</string>
    <string name="down">Down</string>
    <string name="up">Up</string>

    //light detail
    <string name="brightness">Brightness</string>
    <string name="color">Color</string>

    //Camera
    <string name="no_motion">No motion detected</string>
    <string name="motion_detected">Motion detected recently</string>

    //security
    <string name="anomaly_report">Anomaly Report</string>
    <string name="alert_exclamation">Alert!</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="alert_placeholder">Alert message!</string>

    //edit room
    <string name="room_settings">Room settings</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>

    //notifications channel
    <string name="channel_name">Main channel</string>
    <string name="channel_description">Home Assistant notifications</string>

    <string name="not_implemented">This part is not implemented in this version of application.</string>
    <string name="no_activities">No recent activities. Tap to show activities of the day.</string>
    <string name="disconnected">Disconnected.</string>
</resources>