<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="219dp"
            android:layout_height="46dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/broker_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConInfo" />

        <Switch
            android:id="@+id/sCleanSession"
            android:layout_width="305dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:text="@string/clean_session"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="305dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sSSL" />

        <Switch
            android:id="@+id/sSSL"
            android:layout_width="305dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:text="@string/ssl_comunication"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUrl" />

        <EditText
            android:id="@+id/etPort"
            android:layout_width="84dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/etUrl"
            app:layout_constraintTop_toBottomOf="@+id/tvConInfo" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="305dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <TextView
            android:id="@+id/tvConInfo"
            android:layout_width="295dp"
            android:layout_height="30dp"
            android:layout_marginTop="68dp"
            android:text="@string/connection_information"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:text="@string/connect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sCleanSession"
            app:layout_constraintVertical_bias="0.122" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>