<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="2dp"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/tcActivities"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="2dp"
        android:textSize="18sp"
        android:text="@string/activities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tcActivities" />

    <TextView
        android:id="@+id/tvPresets"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="2dp"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:text="@string/presets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <HorizontalScrollView
        android:id="@+id/hsvPresets"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPresets">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPresets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvRooms"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="2dp"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:text="@string/rooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsvPresets" />


    <HorizontalScrollView
        android:id="@+id/hsvRooms"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRooms">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRooms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="horizontal" />
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>